--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@laufire/resist": "^0.0.5",
-    "@laufire/utils": "^3.0.0-0"
+    "@laufire/utils": "^3.0.0-0",
+    "convert-csv-to-json": "^1.3.3",
+    "csv-parser": "^3.0.0",
+    "csvtojson": "^2.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
